[gd_scene load_steps=107 format=3 uid="uid://yex5sd6v1s3m"]

[ext_resource type="Script" path="res://entities/boss/super_boss.gd" id="1_fn6vo"]
[ext_resource type="Texture2D" uid="uid://6t48o6y1gwfn" path="res://art/spritesheets/boss/super_boss_attack.png" id="2_ilc8m"]
[ext_resource type="Texture2D" uid="uid://3okqjj6fpsl2" path="res://art/spritesheets/boss/super_boss_idle.png" id="3_1hcst"]
[ext_resource type="Texture2D" uid="uid://dsks26pyyl531" path="res://art/spritesheets/boss/super_boss_special.png" id="4_hjblo"]
[ext_resource type="PackedScene" uid="uid://dsc4vj8608r1r" path="res://audio/death_sound.tscn" id="5_q3iwf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xqtyt"]
radius = 25.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2jg35"]
atlas = ExtResource("2_ilc8m")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_el417"]
atlas = ExtResource("2_ilc8m")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml6w5"]
atlas = ExtResource("2_ilc8m")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jb2d"]
atlas = ExtResource("2_ilc8m")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipg8k"]
atlas = ExtResource("2_ilc8m")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycfmu"]
atlas = ExtResource("2_ilc8m")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_veqeb"]
atlas = ExtResource("2_ilc8m")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dei08"]
atlas = ExtResource("2_ilc8m")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjl8i"]
atlas = ExtResource("3_1hcst")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmsdn"]
atlas = ExtResource("3_1hcst")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_12rcr"]
atlas = ExtResource("3_1hcst")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xays6"]
atlas = ExtResource("3_1hcst")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_scpdj"]
atlas = ExtResource("3_1hcst")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5u57"]
atlas = ExtResource("3_1hcst")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8djix"]
atlas = ExtResource("3_1hcst")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpv6l"]
atlas = ExtResource("3_1hcst")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76ntw"]
atlas = ExtResource("3_1hcst")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i35p"]
atlas = ExtResource("3_1hcst")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_73ovd"]
atlas = ExtResource("3_1hcst")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmtev"]
atlas = ExtResource("3_1hcst")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08b0i"]
atlas = ExtResource("3_1hcst")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyp3b"]
atlas = ExtResource("3_1hcst")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jam8x"]
atlas = ExtResource("3_1hcst")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5s0v"]
atlas = ExtResource("3_1hcst")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5d43"]
atlas = ExtResource("3_1hcst")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl0ux"]
atlas = ExtResource("3_1hcst")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8hfa"]
atlas = ExtResource("3_1hcst")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7ron"]
atlas = ExtResource("3_1hcst")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c356"]
atlas = ExtResource("3_1hcst")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ojl4"]
atlas = ExtResource("3_1hcst")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2qmd"]
atlas = ExtResource("3_1hcst")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1teud"]
atlas = ExtResource("3_1hcst")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y5vi"]
atlas = ExtResource("3_1hcst")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6aej"]
atlas = ExtResource("3_1hcst")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olift"]
atlas = ExtResource("3_1hcst")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_joj7v"]
atlas = ExtResource("3_1hcst")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdbm3"]
atlas = ExtResource("3_1hcst")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s43dm"]
atlas = ExtResource("3_1hcst")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7quur"]
atlas = ExtResource("3_1hcst")
region = Rect2(1920, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r52i4"]
atlas = ExtResource("3_1hcst")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypy7n"]
atlas = ExtResource("3_1hcst")
region = Rect2(2048, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf3cu"]
atlas = ExtResource("3_1hcst")
region = Rect2(2112, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ml21"]
atlas = ExtResource("3_1hcst")
region = Rect2(2176, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx6t0"]
atlas = ExtResource("3_1hcst")
region = Rect2(2240, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjxmk"]
atlas = ExtResource("3_1hcst")
region = Rect2(2304, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tte2d"]
atlas = ExtResource("3_1hcst")
region = Rect2(2368, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngc0j"]
atlas = ExtResource("3_1hcst")
region = Rect2(2432, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o76ar"]
atlas = ExtResource("3_1hcst")
region = Rect2(2496, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_416vj"]
atlas = ExtResource("3_1hcst")
region = Rect2(2560, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdgae"]
atlas = ExtResource("3_1hcst")
region = Rect2(2624, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_45xsh"]
atlas = ExtResource("3_1hcst")
region = Rect2(2688, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8to8"]
atlas = ExtResource("3_1hcst")
region = Rect2(2752, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n02c"]
atlas = ExtResource("3_1hcst")
region = Rect2(2816, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjmu1"]
atlas = ExtResource("3_1hcst")
region = Rect2(2880, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghx6i"]
atlas = ExtResource("3_1hcst")
region = Rect2(2944, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tiy4"]
atlas = ExtResource("3_1hcst")
region = Rect2(3008, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmiim"]
atlas = ExtResource("4_hjblo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b50i"]
atlas = ExtResource("4_hjblo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwskc"]
atlas = ExtResource("4_hjblo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shw1x"]
atlas = ExtResource("4_hjblo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwv3c"]
atlas = ExtResource("4_hjblo")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxca3"]
atlas = ExtResource("4_hjblo")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yylkl"]
atlas = ExtResource("4_hjblo")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ongj7"]
atlas = ExtResource("4_hjblo")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij35y"]
atlas = ExtResource("4_hjblo")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjql1"]
atlas = ExtResource("4_hjblo")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdplr"]
atlas = ExtResource("4_hjblo")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rt07"]
atlas = ExtResource("4_hjblo")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_irc3f"]
atlas = ExtResource("4_hjblo")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbyhu"]
atlas = ExtResource("4_hjblo")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j0w3"]
atlas = ExtResource("4_hjblo")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpqqa"]
atlas = ExtResource("4_hjblo")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpf4f"]
atlas = ExtResource("4_hjblo")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83j30"]
atlas = ExtResource("4_hjblo")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoq63"]
atlas = ExtResource("4_hjblo")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhdil"]
atlas = ExtResource("4_hjblo")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvc8w"]
atlas = ExtResource("4_hjblo")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57nrp"]
atlas = ExtResource("4_hjblo")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkga"]
atlas = ExtResource("4_hjblo")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oif41"]
atlas = ExtResource("4_hjblo")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x3vp"]
atlas = ExtResource("4_hjblo")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m2ke"]
atlas = ExtResource("4_hjblo")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcwqj"]
atlas = ExtResource("4_hjblo")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j883l"]
atlas = ExtResource("4_hjblo")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_huw3k"]
atlas = ExtResource("4_hjblo")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47ckm"]
atlas = ExtResource("4_hjblo")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ml0t"]
atlas = ExtResource("4_hjblo")
region = Rect2(1920, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xayf"]
atlas = ExtResource("4_hjblo")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r77ir"]
atlas = ExtResource("4_hjblo")
region = Rect2(2048, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_741vl"]
atlas = ExtResource("4_hjblo")
region = Rect2(2112, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fclcp"]
atlas = ExtResource("4_hjblo")
region = Rect2(2176, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs1to"]
atlas = ExtResource("4_hjblo")
region = Rect2(2240, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocovo"]
atlas = ExtResource("4_hjblo")
region = Rect2(2304, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_udqjp"]
atlas = ExtResource("4_hjblo")
region = Rect2(2368, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg0wq"]
atlas = ExtResource("4_hjblo")
region = Rect2(2432, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lou1o"]
atlas = ExtResource("4_hjblo")
region = Rect2(2496, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x58jq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jg35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el417")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml6w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jb2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipg8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycfmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veqeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dei08")
}],
"loop": false,
"name": &"Attack",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjl8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmsdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12rcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xays6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scpdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5u57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8djix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpv6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76ntw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i35p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73ovd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmtev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08b0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyp3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jam8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5s0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5d43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl0ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8hfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7ron")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c356")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ojl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2qmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1teud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y5vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6aej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olift")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joj7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdbm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s43dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7quur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r52i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypy7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf3cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ml21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx6t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjxmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tte2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngc0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o76ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_416vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdgae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45xsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8to8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n02c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjmu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghx6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tiy4")
}],
"loop": true,
"name": &"Idle",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmiim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b50i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwskc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shw1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwv3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxca3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yylkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ongj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij35y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjql1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdplr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rt07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irc3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbyhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j0w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpqqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpf4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83j30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoq63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhdil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvc8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57nrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oif41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x3vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m2ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j883l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huw3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47ckm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ml0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xayf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r77ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_741vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fclcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs1to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocovo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udqjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg0wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lou1o")
}],
"loop": false,
"name": &"Special",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcn7c"]
size = Vector2(512, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a46y5"]
size = Vector2(13, 9.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_t1jx7"]
radius = 26.0

[node name="SuperBoss" type="CharacterBody2D"]
position = Vector2(0, -16)
script = ExtResource("1_fn6vo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_xqtyt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_x58jq")
animation = &"Attack"
frame = 7
frame_progress = 0.943397
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_rcn7c")

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
visible = false
position = Vector2(-1.5, -10)
shape = SubResource("RectangleShape2D_a46y5")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_t1jx7")

[node name="DeathSound" parent="." instance=ExtResource("5_q3iwf")]

[node name="CrystalBeamTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpecialAttackTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="timeout" from="CrystalBeamTimer" to="." method="_on_crystal_beam_timer_timeout"]
[connection signal="timeout" from="SpecialAttackTimer" to="." method="_on_special_attack_timer_timeout"]
